First step of the arquitecture. almost empty files

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ matplotlib
 seaborn
 scikit-learn
 selenium
+
+# API
+fastapi         # API framework
+pytz            # time zone management
+uvicorn         # web server
