Docker file setup with api send as numpy arrays, all the api its working with gcloud, waiting for test

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,9 @@
-pytest
-pylint
-ipdb
-jupyterlab
-numpy
-pandas
-matplotlib
-seaborn
+# Machine Learning
 scikit-learn
-selenium
-colorama
+
 
 # API
 fastapi         # API framework
-pytz            # time zone management
 uvicorn         # web server
 
 # MODEL
